# rest-vs-grpc

./: Cargo.toml  README.md  RESULTS_20230508.md
client/: Cargo.toml
client/src/: main.rs
proto/: build.rs  inventory.proto
proto/src/: lib.rs
server-java/: run-grpc.sh
server-java/grpc-server/: pom.xml
server-java/grpc-server/src/main/java/inventory/: Main.java
server-java/grpc-server/src/main/java/inventory/server/: InventoryServiceImpl.java
server-java/grpc-server/src/main/java/org/example/: Main.java
server-java/grpc-server/src/main/java/org/example/client/: GreetingClient.java  HeartBeatClient.java  ItemsFullClient.java  ItemsStatusClient.java  ItemsSummaryClient.java
server-java/grpc-server/src/main/java/org/example/server/: GreetingImpl.java  InventoryServiceImpl.java  TestGreetingServer.java
server-java/grpc-server/src/main/proto/: Inventory.proto  inventory.proto
server-java/grpc-server/src/main/resources/: application.properties
server-java/rest-server/: pom.xml
server-java/rest-server/src/main/java/inventory/: RestApiApplication.java
server-java/rest-server/src/main/java/inventory/api/controller/: InventoryController.java
server-java/rest-server/src/main/resources/: application.properties
server-java/src/main/java/inventory/: HelloWorldServer.java
server-java/src/main/proto/: inventory.proto
server-python/: .gitignore  demo.py  demo_out  generate.sh  grpc-server.py  main.py  requirements.txt  rest-server.py  run-grpc.sh  run-rest.sh
server-rust/: Cargo.toml
server-rust/src/: main.rs
(+20 files in other folders)
