[workspace]
members = ["client", "proto", "server-rust"]

[workspace.dependencies]
proto = { path = "./proto" }

axum = "0.6.15"
lazy_static = "1.4.0"
prost = "0.11.9"
reqwest = "0.11.16"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.9.1"
tonic-build = "0.9.1"
