[workspace]
members = ["client", "proto", "server-rust"]

[workspace.dependencies]
proto = { path = "./proto" }

anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
prost = "0.11.9"
reqwest = "0.11.17"
serde = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.9.2"
tonic-build = "0.9.2"
