[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { workspace = true }

axum = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
